feat: controller and service directory setup
